--- a/include/calculation_formulas.ipynb
+++ b/include/calculation_formulas.ipynb
@@ -4,52 +4,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'risk_profile' from 'test' (C:\\Users\\Might\\anaconda3\\lib\\test\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-fa227010aab2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtest\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrisk_profile\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mdata_retrieval\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mformat_close_price\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mdata_retrieval\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mimport_asset_data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'risk_profile' from 'test' (C:\\Users\\Might\\anaconda3\\lib\\test\\__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from test import risk_profile\n",
+    "from profiler import risk_profile\n",
     "from data_retrieval import format_close_price\n",
-    "from data_retrieval import import_asset_data"
+    "from data_retrieval import import_asset_data\n",
+    "from MCForecastTools import MCSimulation"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -62,23 +24,30 @@
     "avg_ann_vol_list=[]\n",
     "avg_ann_sharpe_ratio_list=[]\n",
     "#loop through tickers= [\"AGG\",\"SPY\",\"BTC\"] to run calculations for each ticker.\n",
-    "for asset in tickers:\n",
-    "    #scrape data from alpaca using import_asset_data() from data_retrieval.py\n",
-    "    initial_df=import_asset_data(start, end, asset, timeframe)\n",
-    "    #filter dataframe by using format_close_price() from data_retrieval.py\n",
-    "    df=format_close_price(initial_df, asset)\n",
-    "    #calculate avg_annual_return and save it to a variable: aarl for append. \n",
-    "    aarl=average_annual_return(df)\n",
-    "    #append aarl to avg_annual_return_list with corresponding indices of the ticker\n",
-    "    avg_annual_return_list.append(aarl)\n",
-    "    #calculate  avg_ann_vol and save it to a variable: aav for append. \n",
-    "    aav=avg_annual_vol(avg_annual_return)\n",
-    "    #append aarl to avg_ann_vol_list with corresponding indices of the ticker\n",
-    "    avg_ann_vol_list.append(aav)\n",
-    "    #calculate  avg_ann_sharpe_ratio and save it to a variable: sr for append. \n",
-    "    sr=sharpe_ratio(avg_annual_return,avg_ann_vol)\n",
-    "    #append sr to avg_ann_sharpe_ratio_list with corresponding indices of the ticker\n",
-    "    avg_ann_sharpe_ratio_list.append(sr)"
+    "def calculate():\n",
+    "    for i < len(tickers):\n",
+    "        #scrape data from alpaca using import_asset_data() from data_retrieval.py\n",
+    "        initial_df=import_asset_data(start, end, asset, timeframe)\n",
+    "        #filter dataframe by using format_close_price() from data_retrieval.py\n",
+    "        df=format_close_price(initial_df, asset)\n",
+    "        if i ==0:\n",
+    "            agg_df==df\n",
+    "        elif i ==1:\n",
+    "            spy_df=df\n",
+    "        else:\n",
+    "            btc_df=df\n",
+    "        #calculate avg_annual_return and save it to a variable: aarl for append. \n",
+    "        aarl=average_annual_return(df)\n",
+    "        #append aarl to avg_annual_return_list with corresponding indices of the ticker\n",
+    "        avg_annual_return_list.append(aarl)\n",
+    "        #calculate  avg_ann_vol and save it to a variable: aav for append. \n",
+    "        aav=avg_annual_vol(avg_annual_return)\n",
+    "        #append aarl to avg_ann_vol_list with corresponding indices of the ticker\n",
+    "        avg_ann_vol_list.append(aav)\n",
+    "        #calculate  avg_ann_sharpe_ratio and save it to a variable: sr for append. \n",
+    "        sr=sharpe_ratio(avg_annual_return,avg_ann_vol)\n",
+    "        #append sr to avg_ann_sharpe_ratio_list with corresponding indices of the ticker\n",
+    "        avg_ann_sharpe_ratio_list.append(sr)"
    ]
   },
   {
@@ -142,15 +111,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if risk_profile() == \"conservative\":\n",
-    "    asset_allocation=[1,0,0]\n",
-    "    asset_allocation_funtion(tickers, asset_allocation, avg_annual_return_list)\n",
-    "elif risk_profile() == \"moderate\":\n",
-    "    asset_allocation=[.3,.6,.1]\n",
-    "    asset_allocation_funtion(tickers, asset_allocation, avg_annual_return_list)\n",
-    "else:\n",
-    "    asset_allocation=[0,.8,.2]\n",
-    "    asset_allocation_funtion(tickers, asset_allocation, avg_annual_return_list)"
+    "def port_simulation():\n",
+    "    merge_dict = {tickers[0]: agg_df , tickers[1]: spy_df,  tickers[2]:btc_df}\n",
+    "    merged_df = pd.concat(merge_dict.values(), axis=1, keys=merge_dict.keys())\n",
+    "    simulation = MCSimulation(\n",
+    "        portfolio_data=merged_df,\n",
+    "        weights=asset_allocation,\n",
+    "        num_simulation=1000,\n",
+    "       num_trading_days=252*10,\n",
+    "    )\n",
+    "    port_df=simulation.portfolio_data.head()\n",
+    "    port_std=port_df.std()\n",
+    "    port_sharpe_ratio=portfolio_return/port_std\n",
+    "    return simulation.calc_cumulative_return()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def profile(risk_profile()):\n",
+    "    if risk_profile() == \"conservative\":\n",
+    "        asset_allocation=[1,0,0]\n",
+    "        calculate()\n",
+    "        asset_allocation_funtion(tickers, asset_allocation, avg_annual_return_list)\n",
+    "        port_simulation()\n",
+    "    elif risk_profile(risk_profile()) == \"moderate\":\n",
+    "        asset_allocation=[.3,.6,.1]\n",
+    "        calculate()\n",
+    "        asset_allocation_funtion(tickers, asset_allocation, avg_annual_return_list)\n",
+    "        port_simulation()\n",
+    "    else:\n",
+    "        asset_allocation=[0,.8,.2]\n",
+    "        calculate()\n",
+    "        asset_allocation_funtion(tickers, asset_allocation, avg_annual_return_list)\n",
+    "        port_simulation()"
    ]
   }
  ],
