added two more risk profiles

--- a/include/calculation_formulas.ipynb
+++ b/include/calculation_formulas.ipynb
@@ -134,12 +134,22 @@
    "source": [
     "def profile(risk_profile()):\n",
     "    if risk_profile() == \"conservative\":\n",
-    "        asset_allocation=[1,0,0]\n",
+    "        asset_allocation=[0.9,.1,0]\n",
+    "        calculate()\n",
+    "        asset_allocation_funtion(tickers, asset_allocation, avg_annual_return_list)\n",
+    "        port_simulation()\n",
+    "    elif risk_profile(risk_profile()) == \"moderately conservative\":\n",
+    "        asset_allocation=[.7,.25,.5]\n",
     "        calculate()\n",
     "        asset_allocation_funtion(tickers, asset_allocation, avg_annual_return_list)\n",
     "        port_simulation()\n",
     "    elif risk_profile(risk_profile()) == \"moderate\":\n",
     "        asset_allocation=[.3,.6,.1]\n",
+    "        calculate()\n",
+    "        asset_allocation_funtion(tickers, asset_allocation, avg_annual_return_list)\n",
+    "        port_simulation()\n",
+    "    elif risk_profile(risk_profile()) == \"moderately aggressive\":\n",
+    "        asset_allocation=[.1,.75,.15]\n",
     "        calculate()\n",
     "        asset_allocation_funtion(tickers, asset_allocation, avg_annual_return_list)\n",
     "        port_simulation()\n",
