fixed the for loop condition

--- a/include/calculation_formulas.ipynb
+++ b/include/calculation_formulas.ipynb
@@ -15,28 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create empty lists to store avg_annual_return, avg_ann_vol, and avg_ann_sharpe_ratio, with corresponding indices of tickers\n",
-    "avg_ann_return_list=[]\n",
-    "avg_ann_vol_list=[]\n",
-    "avg_ann_sharpe_ratio_list=[]\n",
     "#loop through tickers= [\"AGG\",\"SPY\",\"BTC\"] to run calculations for each ticker.\n",
     "def calculate():\n",
-    "    for i < len(tickers):\n",
+    "    #create empty lists to store avg_annual_return, avg_ann_vol, and avg_ann_sharpe_ratio, with corresponding indices of tickers\n",
+    "    avg_ann_return_list=[]\n",
+    "    avg_ann_vol_list=[]\n",
+    "    avg_ann_sharpe_ratio_list=[]\n",
+    "    i=0\n",
+    "    for i in range(len(tickers)):\n",
     "        #scrape data from alpaca using import_asset_data() from data_retrieval.py\n",
-    "        initial_df=import_asset_data(start, end, asset, timeframe)\n",
+    "        initial_df=import_asset_data(start, end, tickers[i], timeframe)\n",
     "        #filter dataframe by using format_close_price() from data_retrieval.py\n",
     "        df=format_close_price(initial_df, asset)\n",
-    "        #save each filtered df to a corresponding variable. \n",
-    "        if i ==0:\n",
-    "            agg_df=df\n",
-    "        elif i ==1:\n",
-    "            spy_df=df\n",
-    "        else:\n",
-    "            btc_df=df\n",
     "        #calculate avg_annual_return and save it to a variable: aarl for append. \n",
     "        aarl=average_ann_return(df)\n",
     "        #append aarl to avg_annual_return_list with corresponding indices of the ticker\n",
@@ -48,12 +42,21 @@
     "        #calculate  avg_ann_sharpe_ratio and save it to a variable: sr for append. \n",
     "        sr=sharpe_ratio(avg_ann_return,avg_ann_vol)\n",
     "        #append sr to avg_ann_sharpe_ratio_list with corresponding indices of the ticker\n",
-    "        avg_ann_sharpe_ratio_list.append(sr)"
+    "        avg_ann_sharpe_ratio_list.append(sr)\n",
+    "        #save each filtered df to a corresponding variable. \n",
+    "        if i ==0:\n",
+    "            agg_df=df\n",
+    "        elif i ==1:\n",
+    "            spy_df=df\n",
+    "        else:\n",
+    "            btc_df=df\n",
+    "        i=+1 \n",
+    "    return avg_ann_return_list , avg_ann_vol_list , avg_ann_sharpe_ratio_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "portfolio_return=0    \n",
     "def asset_allocation_funtion(tickers, asset_allocation, avg_ann_return_list):\n",
-    "    for i < len(tickers):\n",
+    "    for i in range(len(tickers)):\n",
     "        portfolio_return=+(asset_allocation[i]*avg_ann_return_list[i])\n",
     "    return portfolio_return\n",
     "    "
